--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               <p class="mt-1 text-sm text-slate-500">Cầu Giấy, Hà Nội • 3PN • 2WC</p>
               <div class="mt-3 flex items-center justify-between">
                 <div class="text-brand-700 font-bold">5,2 tỷ</div>
-                <a href="#" class="text-sm px-3 py-1.5 rounded-lg border border-brand-600 text-brand-700 hover:bg-brand-50">Chi tiết</a>
+                <a href="detail.html?id=emerald-01" class="text-sm px-3 py-1.5 rounded-lg border border-brand-600 text-brand-700 hover:bg-brand-50">Chi tiết</a>
               </div>
             </div>
           </div>
